flat/template.yaml
# Source: dex/charts/dex/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dex
  labels:
    helm.sh/chart: dex-0.12.1
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: "2.35.3"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
      appProtocol: http
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
      appProtocol: https
    - name: telemetry
      port: 5558
      targetPort: telemetry
      protocol: TCP
      appProtocol: http
  selector:
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
---
# Source: dex/charts/dex/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dex
  labels:
    helm.sh/chart: dex-0.12.1
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: "2.35.3"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dex
      app.kubernetes.io/instance: dex
  template:
    metadata:
      annotations:
      
        checksum/config: dfe43be49f0258684f490ddfeb334993c6659bef1a9901e2b8235c74d0804d99
      labels:
        app.kubernetes.io/name: dex
        app.kubernetes.io/instance: dex
    spec:
      serviceAccountName: dex
      securityContext:
        fsGroup: 20000
        runAsNonRoot: true
      containers:
        - name: dex
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsGroup: 10000
            runAsUser: 10000
          image: "ghcr.io/dexidp/dex:v2.35.3"
          imagePullPolicy: IfNotPresent
          args:
            - dex
            - serve
            - --web-http-addr
            - 0.0.0.0:5556
            - --web-https-addr
            - 0.0.0.0:5554
            - --telemetry-addr
            - 0.0.0.0:5558
            - /etc/dex/config.yaml
          ports:
            - name: http
              containerPort: 5556
              protocol: TCP
            - name: https
              containerPort: 5554
              protocol: TCP
            - name: telemetry
              containerPort: 5558
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /healthz/live
              port: telemetry
          readinessProbe:
            httpGet:
              path: /healthz/ready
              port: telemetry
          resources:
            limits:
              cpu: 1
              memory: 64Mi
            requests:
              cpu: 10m
              memory: 32Mi
          volumeMounts:
            - name: config
              mountPath: /etc/dex
              readOnly: true
            - mountPath: /etc/dex/tls
              name: tls
            - mountPath: /tmp
              name: tmp
      volumes:
        - name: config
          secret:
            secretName: dex
        - name: tls
          secret:
            secretName: dex-tls
        - emptyDir:
            medium: Memory
          name: tmp
---
# Source: dex/charts/basic/templates/ingress-callback.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: dex-basic-secret
    # message to display with an appropriate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required - foo'
    # specific configuration to handle user group mapping
    nginx.ingress.kubernetes.io/configuration-snippet: |
      set_by_lua $remote_group '
        ugm = {
          ["admin"] = "readwrite",["foo"] = "Admin",["maintainer"] = "maintainer",["operator"] = "operator",["sysadmin"] = "sysadmin",["sysauditor"] = "sysauditor",
        }
        res = ugm[ngx.var.remote_user]
        if (res == nil) then
          return "none"
        end
        return res
      ';

      proxy_set_header X-Remote-User $remote_user;
      proxy_set_header X-Remote-Group $remote_group;
      # Remove potential Authorization header which conflict with forced authentication
      proxy_set_header Authorization "";
    nginx.ingress.kubernetes.io/limit-rps: "1"
  name: dex-basic-callback
spec:
  rules:
  - host: "auth.kast.wip"
    http:
      paths:
      - backend:
          service:
            name: dex
            port:
              number: 8080
        path: /auth/realms/kast/callback/login
        pathType: Prefix
---
# Source: dex/charts/dex/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dex
  labels:
    helm.sh/chart: dex-0.12.1
    app.kubernetes.io/name: dex
    app.kubernetes.io/instance: dex
    app.kubernetes.io/version: "2.35.3"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: "auth.kast.wip"
      http:
        paths:
          - path: /auth/realms/kast
            pathType: Prefix
            backend:
              service:
                name: dex
                port:
                  number: 8080
